renaming instance variable adding java doc